minor change for test

--- a/notebook/test_hf_api.ipynb
+++ b/notebook/test_hf_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "0be6f37c",
    "metadata": {},
    "outputs": [],
@@ -17,8 +17,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url='http://10.20.14.67:46230'\n",
+    "url='https://clarkmaio-aurora-api.hf.space/get_history'\n",
     "results = requests.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "df148921",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [500]>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
    ]
   }
  ],
